Hard code Images into Gallery and Text in About Us and Services

--- a/index.html
+++ b/index.html
@@ -55,10 +55,8 @@
         <section id="services">
             <div class="service-container">
                 <div class="service-text">
-                    <h2>Our Services</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque unde vitae odit, quos modi id ut in rerum quasi voluptatibus. Ab nostrum blanditiis placeat veritatis non aliquam excepturi magnam dolore!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ad id sunt. Quia numquam minus, unde id quam doloribus mollitia. Voluptates, laudantium eos? Minima incidunt in blanditiis obcaecati alias molestiae!
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et iure eaque, sunt fugit excepturi quasi repudiandae in sed illo enim aliquam voluptate amet libero molestias deleniti. Itaque facere alias iure?
+                    <h2 class="service-title">Our Services</h2>
+                    <p>Welcome to our glamorous world of beauty! At Beauty Bar, we are your ultimate destination for stunning eyelashes and exquisite nails. With a passion for perfection, we craft personalized looks that amplify your natural beauty. Indulge in our luxurious eyelash extensions, tailored to suit your unique style, leaving you with captivating eyes that turn heads. Elevate your allure with our manicures, offering a spectrum of colors and designs to complement your individuality. 
                     </p>
                     <a class="menu" href="#">Our Menu</a>
                 </div>
@@ -74,12 +72,12 @@
                 </div>
                 <div class="gallery">
                     <ul>
-                        <li><img src="./assets/placeholder6.jpg" alt=""></li>
-                        <li><img src="./assets/placeholder6.jpg" alt=""></li>
-                        <li><img src="./assets/placeholder6.jpg" alt=""></li>
-                        <li><img src="./assets/placeholder6.jpg" alt=""></li>
-                        <li><img src="./assets/placeholder6.jpg" alt=""></li>
-                        <li><img src="./assets/placeholder6.jpg" alt=""></li>
+                        <li><img src="./assets/1.png" alt=""></li>
+                        <li><img src="./assets/5.png" alt=""></li>
+                        <li><img src="./assets/2.png" alt=""></li>
+                        <li><img src="./assets/4.png" alt=""></li>
+                        <li><img src="./assets/3.png" alt=""></li>
+                        <li><img src="./assets/6.png" alt=""></li>
 
                     </ul>
                 </div> 
@@ -92,8 +90,7 @@
         <section id="location">
             <div class="location-container">
                 <div class="hours">
-                    <h2>36 Blue Jays Way</h2>
-                    <p>Nails, Lashes, Facials, Tinting</p>
+
                     <h2>Hours of Operation:</h2>
                     <p>Monday - Closed</p>
                     <p>Tuesday 10am - 7pm</p>
@@ -102,6 +99,9 @@
                     <p>Friday 10am - 7pm</p>
                     <p>Saturday 10am - 7pm</p>
                     <p>Sunday - Closed</p>
+                    <h2>36 Blue Jays Way</h2>
+                    <p>Nails, Lashes, Facials, Tinting</p>
+
                 </div>
                 <div class="map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2887.1552995482803!2d-79.39461912379774!3d43.64493717110246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b34d9fa500fa1%3A0x1274109c47a48d6d!2s36%20Blue%20Jays%20Way%2C%20Toronto%2C%20ON%20M5V%203T3!5e0!3m2!1sen!2sca!4v1690561855666!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -115,11 +115,14 @@
                 </div>
                 <div class="about-me">
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea laudantium laborum harum excepturi quaerat quam illum a, commodi iste possimus modi dicta porro deserunt numquam. Labore necessitatibus animi alias vitae.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quibusdam et incidunt fugiat sapiente odio quia architecto laborum velit? Ex consequatur voluptates ipsam modi impedit delectus incidunt ab aperiam sapiente!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis esse explicabo recusandae in expedita velit illo, assumenda rerum, dolores natus aspernatur, similique eos provident ratione. Magni, unde officiis. Commodi, voluptate?
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit atque perferendis possimus, numquam in itaque esse autem necessitatibus? Quos optio aspernatur quidem, unde eius voluptatem dolorum nisi corrupti voluptatum mollitia.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum numquam, facere fugiat delectus quaerat aspernatur officiis reprehenderit neque alias dignissimos consequatur, obcaecati, perspiciatis aliquid consectetur quo aliquam soluta asperiores blanditiis.
+                        Welcome to [Salon Name], a haven of beauty and self-expression that blossomed into existence in 2020. Founded with passion and a vision to empower individuals through exquisite nail and lash artistry, our salon is a celebration of all things glamorous.
+                   
+                        At [Salon Name], we believe that beauty is more than just skin deep—it's an expression of your unique personality and style. Our dedicated team of skilled technicians strives to create personalized nail and lash experiences that reflect the essence of each client, leaving them feeling confident and radiant.
+                    </p>
+                    <p>        
+                        With a commitment to using premium products and staying up-to-date with the latest trends and techniques, we ensure that every visit to our salon is an indulgent journey of relaxation and transformation.
+                    
+                        Whether you desire captivating eyelash extensions that mesmerize or dreamy nails that make a statement, [Salon Name] is your sanctuary of elegance and artistry. Join us as we paint the world with beauty, one lash and nail at a time.
                     </p>
                 </div>
             </div>
