Changes after Client Review

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <style>
+        @font-face {
+            font-family: Neon;
+            src: url(NeonSans.ttf);
+        }
+        @font-face {
+            font-family: Titles;
+            src: url(Emitha-Script.ttf);
+        }
+
+        @font-face {
+            font-family: Bold;
+            src: url(TT\ Firs\ Neue\ Trial\ ExtraBold.ttf);
+        }
+    </style>
 </head>
 <body>
     <div class="navigation">
@@ -36,9 +51,9 @@
         <div class="container">
 
             <div class="title">
-                <h1>Shabeeha's</h1>  
-                <h2>Beauty Bar</h2> 
-                <h3>Scarborough Based Nails & Lashes</h3>
+                
+                <h1>Nails and Lashes By</h1> 
+                <h2>Shabeeha</h2> 
                 <a href="https://calendly.com/testing-nails/30min">Book Appointment</a>
             </div>
             <!-- <div>
@@ -77,7 +92,7 @@
                         <li><img src="./assets/2.png" alt=""></li>
                         <li><img src="./assets/4.png" alt=""></li>
                         <li><img src="./assets/3.png" alt=""></li>
-                        <li><img src="./assets/6.png" alt=""></li>
+                        <li><img src="./assets/6.png " alt=""></li>
 
                     </ul>
                 </div> 
@@ -100,7 +115,7 @@
                     <p>Saturday 10am - 7pm</p>
                     <p>Sunday - Closed</p>
                     <h2>36 Blue Jays Way</h2>
-                    <p>Nails, Lashes, Facials, Tinting</p>
+                    <p>Scarborough Based Nails & Lashes</p>
 
                 </div>
                 <div class="map">
