Style Changes before Client Review

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SBB</title>
+    <title>By Shabeeha</title>
     <link rel="stylesheet" href="styles/styles.css">
     <script src="script.js"></script>
     <link rel="icon" type="image/x-icon" href="/assets/favi.png">    
@@ -105,11 +105,11 @@
                 </div>
                 <div class="gallery">
                     <ul>
-                        <li><img src="./assets/1.png" alt=""></li>
-                        <li><img src="./assets/5.png" alt=""></li>
                         <li><img src="./assets/2.png" alt=""></li>
-                        <li><img src="./assets/4.png" alt=""></li>
+                        <li><img src="./assets/5.png" alt=""></li>
                         <li><img src="./assets/3.png" alt=""></li>
+                        <li><img src="./assets/4.png" alt=""></li>
+                        <li><img src="./assets/1.png" alt=""></li>
                         <li><img src="./assets/6.png " alt=""></li>
 
                     </ul>
@@ -163,9 +163,9 @@
             <div class="contact-container">
                 <div class="socials">
                     <h2>Email:</h2>
-                    <p>example@email.com</p>
+                    <p>nailsbyshabeeha@gmail.com</p>
                     <h2>Phone:</h2>
-                    <p>(123)-456-7890</p>
+                    <p>+1 (647)-806-6984</p>
                 </div>
 
                 <div class="message">
