Add Policies to Page

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#location">Location</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>function
+                <li><a href="#about">Policies</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -143,18 +143,24 @@
         <section id="about">
             <div class="about-container">
                 <div class="established">
-                    <h2>About Us</h2>
+                    <h2>Policies</h2>
                 </div>
                 <div class="about-me">
+                    <h3>Lash Refills</h3>
                     <p>
-                        Welcome to [Salon Name], a haven of beauty and self-expression that blossomed into existence in 2020. Founded with passion and a vision to empower individuals through exquisite nail and lash artistry, our salon is a celebration of all things glamorous.
-                   
-                        At [Salon Name], we believe that beauty is more than just skin deep—it's an expression of your unique personality and style. Our dedicated team of skilled technicians strives to create personalized nail and lash experiences that reflect the essence of each client, leaving them feeling confident and radiant.
+                        I do not offer foreign fills. Clients will be required to book a removal and full set in this case. Clients must have 40% of their lashes to be considered a fill. Clients must have 85% of their lashes to be considered for a mini fill (within 7 days). Sets after the 3 week mark will be charged as a full set.
                     </p>
+                    <h3>Nail Refills</h3>
+                    <p>
+                        I do not offer foreign fills. clients will be required to book a removal and full set in this case. Clients must notify me whether they want a colour change or a design change. please note that a colour change and a design change are not the same! Design changes will cost more than a colour change. Also notify me of any nails that need to be replaced. Replacing nails will be an additional charge based on products used, length of nail, ETC. 
+                    </p>
+                    <h3>Grace Period</h3>
                     <p>        
-                        With a commitment to using premium products and staying up-to-date with the latest trends and techniques, we ensure that every visit to our salon is an indulgent journey of relaxation and transformation.
-                    
-                        Whether you desire captivating eyelash extensions that mesmerize or dreamy nails that make a statement, [Salon Name] is your sanctuary of elegance and artistry. Join us as we paint the world with beauty, one lash and nail at a time.
+                    All clients will recieve a 10 minute grace period. Clients are required to update me if they will be late. Arrival past the 10 minute grace period will result in a $10 late fee added to the service. Arrival past 20 minutes of the appointment may result in cancellation if i am unableto extent the appointment. If i am able to accomodate past 20 nminutes there will be an additional $10 late fee added to the service for a total of $20. 
+                    </p>
+                    <h3>Rescheduling and Cancellation</h3>
+                    <p>        
+                        All clients are required to provide me with at least 24-hours notice for cancelling or rescheduling appointments. Deposits are valid for a single reschedule date within 30 days of the original appoinment date. Clients rescheduling without a 24-hour notice will be required to re-book with a new deposit. no shows will be banned from booking again in the future. Please respect my time.  
                     </p>
                 </div>
             </div>
