Price Page Markup and Styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>By Shabeeha</title>
+    <title>Nails & Lashes By Shabeeha</title>
     <link rel="stylesheet" href="styles/styles.css">
     <script src="script.js"></script>
     <link rel="icon" type="image/x-icon" href="/assets/favi.png">    
@@ -91,7 +91,7 @@
                     <h2 class="service-title">Our Services</h2>
                     <p>Welcome to our glamorous world of beauty! At Beauty Bar, we are your ultimate destination for stunning eyelashes and exquisite nails. With a passion for perfection, we craft personalized looks that amplify your natural beauty. Indulge in our luxurious eyelash extensions, tailored to suit your unique style, leaving you with captivating eyes that turn heads. Elevate your allure with our manicures, offering a spectrum of colors and designs to complement your individuality. 
                     </p>
-                    <a class="menu" href="#">Our Menu</a>
+                    <a class="menu" href="pricepage.html">Our Menu</a>
                 </div>
                 <div class="service-image">
                     <img src="./assets/service.png">
