Minor Style Changes to Price Page

--- a/pricepage.html
+++ b/pricepage.html
@@ -151,7 +151,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="lash-add-ons">
+                <div class="nail-add-ons">
                     <h3>Nail Add-Ons</h3>
                     <div class="nail-price">
                         <ul>
