Fine Print Added and Style changes

--- a/pricepage.html
+++ b/pricepage.html
@@ -4,17 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prices</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="/styles/pricestyles.css">
     <script src="script.js"></script>
     <link rel="icon" type="image/x-icon" href="/assets/favi.png">
     <script src="https://kit.fontawesome.com/170ce5c00d.js" crossorigin="anonymous"></script>
+    <style>
+        @font-face {
+            font-family: Neon;
+            src: url(NeonSans.ttf);
+        }
+        @font-face {
+            font-family: Titles;
+            src: url(Emitha-Script.ttf);
+        }
+
+        @font-face {
+            font-family: Bold;
+            src: url(TT\ Firs\ Neue\ Trial\ ExtraBold.ttf);
+        }
+    </style>
 </head>
 <body>
     <nav class="navigation">
         <ul>
-            
-            <li><a href="index.html"><i class="fa-solid fa-arrow-left fa-lg" style="color: #feffff;"></i> Back to Home Page</a></li>
+            <li><a href="index.html"><i class="fa-solid fa-arrow-left fa-lg" style="color: #feffff;"></i> Home Page</a></li>
         </ul>
     </nav>
     <header>
@@ -29,7 +43,7 @@
 <div class="prices">
 <!--NAILS-->
     <div class="nail-container">
-        <h2>Nail Prices</h2>
+        <h2>Nail Services</h2>
                 <div class="nails">
                     <h3>Acrylic</h3>
                     <div class="nail-price">
@@ -80,6 +94,8 @@
                             </li>
                         </ul>
                     </div>
+                    <p>* Prices are for Solid Colour</p>
+                    <p>* Overlay prices are the same as listed length price</p>
                 </div>
                 <div class="crystals">
                     <h3>Crystals</h3>
@@ -131,6 +147,7 @@
                             </li>
                         </ul>
                     </div>
+                    <p>* Prices are per finger</p>
                 </div>
                 <div class="other">
                     <h3>Other Services</h3>
@@ -183,7 +200,7 @@
             </div>    
 <!--LASHES--> 
             <div class="lash-container">
-                <h2>Lash Prices</h2>
+                <h2>Lash Services</h2>
                 <div class="lashes">
                     <h3>Lashes</h3>
                     <div class="lash-price">
@@ -235,6 +252,9 @@
                             </li>
                         </ul>
                     </div>
+                    <p>* Prices are for full set/fill</p>
+                    <p>* Must have 40% of lashes for fill</p>
+                    <p>Must have 85% of lashes for mini fill (within 7 days)</p>
                 </div>
             </div>
 </div>
