Menu Page Styles Complete

--- a/pricepage.html
+++ b/pricepage.html
@@ -256,6 +256,8 @@
                     <p>* Must have 40% of lashes for fill</p>
                     <p>Must have 85% of lashes for mini fill (within 7 days)</p>
                 </div>
+                <img src="assets/lash-pic.png" alt="">
+                <img src="assets/price-pic.png" alt="">
             </div>
 </div>
         
