--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#services">Services</a></li>
+                <li><a href="pricepage.html">Our Menu</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#location">Location</a></li>
                 <li><a href="#about">Policies</a></li>
