Tablet and Mobile Queries Updated

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     </div>
                     <div class="message-box">
                         <label>Message</label>
-                        <textarea name="message" required></textarea>
+                        <textarea name="message" class="txt-box" required></textarea>
                         <button class="submission">Submit</button>
                     </div>
                     
