Finalize Site with Client

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 
                 <h1>Nails and Lashes By</h1> 
                 <h2>Shabeeha</h2> 
-                <a href="https://calendly.com/testing-nails/30min">Book Appointment</a>
+                <a href="#contact">Book Appointment</a>
             </div>
 
         </div>        
@@ -83,7 +83,7 @@
             <div class="service-container">
                 <div class="service-text">
                     <h2 class="service-title">Our Services</h2>
-                    <p>Welcome to our glamorous world of beauty! At Beauty Bar, we are your ultimate destination for stunning eyelashes and exquisite nails. With a passion for perfection, we craft personalized looks that amplify your natural beauty. Indulge in our luxurious eyelash extensions, tailored to suit your unique style, leaving you with captivating eyes that turn heads. Elevate your allure with our manicures, offering a spectrum of colors and designs to complement your individuality. 
+                    <p>Welcome to Nails & LAshes by Shabeeha. <br> We offer a range of Nail services including Acrylic or Gel-X with the option of Charms or Crystals to really give your new nails life. <br> We also offer full sets and refills that will have you ready to slay on any occasion. <br> Feel free to send reference pictures to our email in order to create a design that will leave you happy.<br>Please refer to our policies section before booking an appointment.
                     </p>
                     <a class="menu" href="pricepage.html">Our Menu</a>
                 </div>
@@ -120,17 +120,17 @@
 
                     <h2>Appointments:</h2>
                     <p>Please message me to book an appointment.</p>
-                    <p>My availability will be posted to my Instagram highlights as well as Calendy.</p>
+                    <p>My availability will be posted to my Instagram highlights.</p>
                     <p>All clients must send a $20 non-refundable deposit in order to secure their spot.</p>
                     <p>The deposit goes towards the service. The remainder can be paid in cash or e-transfer.</p>
                     <p>Please note that e-transfer payments will be taxed.</p>
 
-                    <h2>36 Blue Jays Way</h2>
+                    <h2>Lampman Drive</h2>
                     <p>Scarborough Based Nails & Lashes</p>
 
                 </div>
                 <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2887.1552995482803!2d-79.39461912379774!3d43.64493717110246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b34d9fa500fa1%3A0x1274109c47a48d6d!2s36%20Blue%20Jays%20Way%2C%20Toronto%2C%20ON%20M5V%203T3!5e0!3m2!1sen!2sca!4v1690561855666!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2879.9385493027567!2d-79.20235922396097!3d43.794888143255456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4da0a9eee89f9%3A0xdc004f7b148c21c3!2sLampman%20Dr%2C%20Toronto%2C%20ON!5e0!3m2!1sen!2sca!4v1693007462159!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
@@ -183,7 +183,7 @@
                     <h2 class="contact-title">Contact Me</h2>
                     <p>Thank you so much for your interest!</p>
                 
-                    <form method="POST">
+                    <form action="https://formsubmit.co/nailsbyshabeeha@gmail.com" method="POST">
                     <div class="info">
                         <input name="Name" type="text" placeholder="Name" required>
                         <input name="Email" type="text" placeholder="Email Address" required>
